💄 Fix: mobile social icon click issue and spacing adjustments

--- a/src/components/aboutme/About.css
+++ b/src/components/aboutme/About.css
@@ -211,11 +211,23 @@
   justify-content: start;
   align-items: center;
   gap: 30px;
+  z-index: 10;
+  position: relative;
+  flex-wrap: wrap;
+  margin-top: 30px;
 }
 
 .i {
   font-size: 30px;
   margin: 10px;
+  cursor: pointer;
+  z-index: 11;
+  position: relative;
+}
+.social a {
+  pointer-events: all;
+  position: relative;
+  z-index: 10;
 }
 
 .social :hover {
@@ -493,15 +505,19 @@
 /* Small Screens (max-width: 576px) */
 @media (max-width: 580px) {
   .about_outer {
+    margin-bottom: -100px;
     height: 100%;
-    margin-bottom: -190px;
+    z-index: 1;
+    margin-bottom: -230px;
+
+    position: relative;
   }
 
   .about_inner {
     flex-direction: column;
     height: auto;
+    padding-bottom: 100px;
   }
-
   .about_box {
     flex-direction: column;
     align-items: center;
@@ -515,6 +531,12 @@
     width: 80%;
     height: 230px;
     border-radius: 50%;
+    z-index: 1;
+    position: relative;
+  }
+  .about_down {
+    z-index: 1;
+    position: relative;
   }
 
   .about_para {
@@ -547,12 +569,28 @@
     height: auto;
     padding: 5px;
   }
+  .social {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    /* margin-top: 30px; */
+    z-index: 10;
+  }
+  .i {
+    font-size: 30px;
+    /* margin: 10px; */
+    cursor: pointer;
+    z-index: 10;
+  }
 
   .about_down {
     align-items: center;
     gap: 25px;
     /* border: 2px solid red; */
-    margin-top: 50px;
+    margin-top: 10px;
     margin-left: 1px;
   }
   .about_down a {
